@@ -37,6 +37,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #12607: In subprocess, fix issue where if stdin, stdout or stderr is
+  given as a low fd, it gets overwritten.
+
 - Issue #12590: IDLE editor window now always displays the first line
   when opening a long file.  With Tk 8.5, the first line was hidden.
 
